--- a/orders_reporter/templates/home.html
+++ b/orders_reporter/templates/home.html
@@ -4,9 +4,11 @@
 {% endblock header %}
 {% block content %}
 <title>Inventory Managment</title>
-
+<h1>Welcome back {{ user.username }} </h1>
+<br>
 <h1>
     Inventory management interface to accurately record and assign products to locations
+
     <h3>New Updates!</h3>
     <h4>Now you are able to see a visualized graph for the entered products.</h4>
 </h1>
