--- a/orders_reporter/templates/home.html
+++ b/orders_reporter/templates/home.html
@@ -3,11 +3,25 @@
 {% block header %}
 {% endblock header %}
 {% block content %}
+
+
+
 <title>Inventory Managment</title>
 
+<style>
+    .paragrah-container {
+        padding-left: 15px;
+        margin: 20px;
+
+
+    }
+    </style>
+ <div class="paragrah-container">
 <h1>
     Inventory management interface to accurately record and assign products to locations
+   
     <h3>New Updates!</h3>
     <h4>Now you are able to see a visualized graph for the entered products.</h4>
 </h1>
+</div>
 {% endblock content %}
